Added legend; small tweaks

--- a/Sum_of_Squared_Errors.ipynb
+++ b/Sum_of_Squared_Errors.ipynb
@@ -129,7 +129,7 @@
     "f = figure(plot_height=300, plot_width=800, sizing_mode='scale_width')\n",
     "\n",
     "# add fit line and errors\n",
-    "yline = f.line(x=x, y=yfit, color='red', line_alpha=0.75, line_width=1.5)\n",
+    "yline = f.line(x=x, y=yfit, color='red', line_alpha=0.75, line_width=1.5, legend='best fit')\n",
     "ysegs = f.segment(x0=x, x1=x, y0=y, y1=yfit, color='red', line_alpha=0.75, line_width=1.5)\n",
     "\n",
     "f.circle(x=x, y=y, size=5, color='blue')\n",
@@ -154,7 +154,7 @@
     "    title_text += ' for A = '+str(best_A)+', p = '+str(best_p)\n",
     "    \n",
     "    f.title.text = title_text\n",
-    "    f.title.align = \"center\"\n",
+    "    f.title.align = \"left\"\n",
     "    push_notebook()\n",
     "\n",
     "\n",
@@ -186,46 +186,6 @@
     "\n",
     "interact(update, const=const, index=index)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
