Improved best fit line apperance

--- a/Sum_of_Squared_Errors.ipynb
+++ b/Sum_of_Squared_Errors.ipynb
@@ -129,8 +129,9 @@
     "f = figure(plot_height=300, plot_width=800, sizing_mode='scale_width')\n",
     "\n",
     "# add fit line and errors\n",
-    "yline = f.line(x=x, y=yfit, color='red', line_alpha=0.75, line_width=1.5, legend='best fit')\n",
-    "ysegs = f.segment(x0=x, x1=x, y0=y, y1=yfit, color='red', line_alpha=0.75, line_width=1.5)\n",
+    "yline = f.line(x=x, y=yfit, color='red', line_alpha=0.75, line_width=2.0, legend='best fit')\n",
+    "ysegs = f.segment(x0=x, x1=x, y0=y, y1=yfit, color='red', line_alpha=0.75, line_width=1.5, \n",
+    "                  line_dash='dashed', legend='differences')\n",
     "\n",
     "f.circle(x=x, y=y, size=5, color='blue')\n",
     "show(f, notebook_handle=True)\n",
